# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.264 2005/05/25 19:28:59 wolf31o2 Exp $

  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-controller.sh:
  Actually modify the embedded target this time.

  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS,
  examples/livecd-stage2_template.spec, modules/livecd_stage2_target.py,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/stage4/stage4-controller.sh, targets/support/kmerge.sh:
  Added mutex to AUTHORS and added livecd/linuxrc support to embedded, stage4,
  and livecd-stage2 targets.

  20 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, catalyst,
  files/catalyst.conf:
  Retired zhen and added storedir to default catalyst.conf.

  20 May 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Uncommented openglify, since it is needed for both opengl-update-livecd and
  opengl-update.

  18 May 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/generic_stage_target.py:
  Fix print statement so it shows when kill_chroot_pids is run correctly

  16 May 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/snapshot_target.py:
  Fix snapshot target to skip the kill_pids check

  06 May 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py:
  Bug fixes in parse_spec, fix issues detecting list or string.

  05 May 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py:
  Fix bug 65284. More flexible spec parsing. Should handle cases where no
  spaces are after :. Better handling of comments ( ie preprocessed and
  stripped off ). Unset empty keys.

  03 May 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  targets/support/kill-chroot-pids.sh:
  Remove extra P_NAME definition that is never used. Saves processing time.
  Bumped catalyst to pre2

  03 May 2005; Eric Edgar <rocket@gentoo.org> catalyst,